# apollo

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml  docker-publish.yml
apollo/: bot.py
apollo/cogs/: Greeting.py  Minecraft.py  Stardew.py
